# ai-skillsafe-app

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json  tsconfig.app.json  tsconfig.json  tsconfig.tests.json  vite.config.ts
.github/scripts/: bundle-appimage-update.sh  make-latest-json.py
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-21-navigation-clarity.md
docs/superpowers/specs/: 2026-05-21-navigation-clarity-design.md
scripts/: make-icon.mjs  mt-translate.mjs
src/: App.tsx  buffer-shim.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: dmg-DS_Store  dmg-background.tiff  icon.icns
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: main.rs
src/components/: AccountPanel.tsx  ArtifactList.tsx  AttachmentTree.tsx  BackupBrowser.tsx  BackupPanel.tsx  BulkRestoreDialog.tsx  CategoryBrowser.tsx  CloudActionsDialog.tsx  CloudInfoPane.tsx  ConfigsList.tsx  ConfigsPanel.tsx  ConfirmDialog.tsx  ConvertDialog.tsx  DiffView.tsx  DiffViewOverlay.tsx  Editor.tsx  EmptyStateGuidance.tsx  FrontmatterForm.tsx  GitInstallDialog.tsx  HistoryPanel.tsx  HooksEditor.tsx  InstallScopeDialog.tsx  InventoryList.tsx  KeybindingsEditor.tsx  LocationHeader.tsx  LockfileImportDialog.tsx  McpEditor.tsx  MemoryLinterPanel.tsx  MergeMcpDialog.tsx  NewArtifactDialog.tsx  PermissionsEditor.tsx  PillCount.tsx  ProjectRootPicker.tsx  QuarantineDialog.tsx  RemoteAttachmentTree.tsx  RemoteEditor.tsx  RemoteList.tsx  RemoteRowMenu.tsx  ResizeHandle.tsx  SafetyBadge.tsx  (+14 more)
src/i18n/: index.ts  types.d.ts
src/i18n/locales/: de.json  en.json  es.json  fr.json  ja.json  zh-CN.json
src/lib/: convert.ts  deepLink.ts  filterCounts.ts  frontmatter.ts  fs.ts  lockfile.ts  markdown.ts  paths.ts  runtime.ts  store.ts  tauriAdapters.ts  validate.ts
src/lib/agents/: detect.ts  registry.ts  state.ts
src/lib/artifacts/: deletePreview.ts  markdownFile.ts  skill.ts  status.ts  types.ts
tests/: _helpers.ts  aggregate.test.ts  artifactStatus.test.ts  backup.test.ts  backupSingle.test.ts  categorySources.test.ts  claudeMemory.test.ts  cline.test.ts  codexConfig.test.ts  configs-hooks.test.ts  configs-keybindings.test.ts  configs-mcp.test.ts  configs-permissions.test.ts  configs-transcriptScan.test.ts  convert.test.ts  editHistory.test.ts  extraSkillDirs.test.ts  feeds.test.ts  fileClassify.test.ts  filterCounts.test.ts  frontmatter.test.ts  gitInstall.test.ts  hermes.test.ts  install-bridge.test.ts  keychainTemplate.test.ts  linuxScheduler.test.ts  lockfile.test.ts  lockfileFormats.test.ts  logIssues.test.ts  master-export.test.ts  master-store.test.ts  mcpLint.test.ts  memoryContradictions.test.ts  memoryWalker.test.ts  openclaw.test.ts  paths.test.ts  restore.test.ts  scan.test.ts  scriptGen.test.ts  secretsScrubber.test.ts  (+12 more)
(+84 files in other folders)
