[package]
name = "skillsafe"
version = "0.2.14"
description = "Cross-platform UI for Claude / Codex / Cursor skills, agents, and commands"
authors = ["skillsafe.ai"]
edition = "2021"

[[bin]]
name = "skillsafe"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-deep-link = "2"
# NB: do not enable the `deep-link` feature on macOS — combined with
# tauri-plugin-deep-link's own onOpenUrl handler, it causes recursive event
# emission inside Listeners::emit_filter and stack-overflows on URL delivery
# (see crash 263178F1, v0.2.1). The deep-link plugin handles URL forwarding
# via Apple Events on macOS without needing single-instance to relay.
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
